2010-11-10  Glenn Morris  <rgm@gnu.org>

	* progmodes/octave-mod.el (octave-mark-block): Update for smie change.

	* emulation/edt.el (edt-with-position): New macro.
	(edt-find-forward, edt-find-backward, edt-find-next-forward)
	(edt-find-next-backward, edt-sentence-forward, edt-sentence-backward)
	(edt-paragraph-forward, edt-paragraph-backward): Use it.

	* emulation/tpu-extras.el (tpu-with-position): New macro.
	(tpu-paragraph, tpu-page, tpu-search-internal): Use it.

	* textmodes/texnfo-upd.el (texinfo-pointer-name): Fix typo.

	* textmodes/texnfo-upd.el (texinfo-all-menus-update)
	(texinfo-menu-copy-old-description, texinfo-start-menu-description)
	(texinfo-master-menu, texinfo-insert-node-lines)
	(texinfo-multiple-files-update):
	* textmodes/texinfmt.el (texinfo-append-refill, texinfo-copying):
	Use line-beginning-position.

	* progmodes/cperl-mode.el (cperl-find-pods-heres, cperl-write-tags):
	No recent Emacs supports system-type `emx'.

	* progmodes/ada-xref.el (is-windows): Rename to ada-on-ms-windows.
	(ada-command-separator, ada-default-prj-properties)
	(ada-find-any-references): Update for above name change.

	* dirtrack.el (dirtrack-directory-function)
	(dirtrack-canonicalize-function):
	* filecache.el (file-cache-completion-ignore-case)
	(file-cache-case-fold-search, file-cache-ignore-case):
	* term.el (serial-port-is-file-p): Cosmetic change.

	* emulation/viper-init.el (viper-ms-style-os-p): Doc fix.
	Remove non-existent `windows-95' system-type.
	* dired.el (dired-chown-program): Remove non-existent `linux'
	system-type.

	* net/net-utils.el (net-utils-remove-ctl-m): Use memq for system-types.
	(ping-program-options): Remove non-existent `linux' system-type.

	* startup.el (package-initialize): Update declaration.

	* ls-lisp.el (ls-lisp-time-lessp, ls-lisp-time-to-seconds): Remove.
	(ls-lisp-handle-switches): Use time-less-p.
	(ls-lisp-format-time): Use float-time.

	* textmodes/remember.el (remember-time-to-seconds): Remove.